--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     required: true
     default: "APP_VERSION,CHANGELOG.md"
   pr_source_repo:
-    description: "Forked PRs do not work by default. If this PR is from a fork, provide the STRING from https://github.com/[STRING].git"
+    description: "Fork PRs do not work by default. If this PR is from a fork, provide the fork (i.e. current) REPO - https://github.com/[REPO]"
     required: true
     default: ""
 
