--- a/action.yml
+++ b/action.yml
@@ -8,8 +8,8 @@ inputs:
     description: 'Comma separated list of all file names that should be tracked.'
     required: true
     default: "APP_VERSION,CHANGELOG.md"
-  pr_source_repo:
-    description: "Fork PRs do not work by default. If this PR is from a fork, provide the fork (i.e. current) REPO_NAME: https://github.com/[REPO_NAME].git"
+  fork_repo_name:
+    description: "PRs from forked repos do not work by default. If this PR is from a forked repo, provide the new REPO_NAME: https://github.com/[REPO_NAME].git"
     required: true
     default: ""
 
