--- a/action.yaml
+++ b/action.yaml
@@ -11,7 +11,7 @@ inputs:
   version_regex:
     description: 'Regular expression for the version pattern. The script will use the first match of this regex in each tracked file.'
     required: true
-    default: '^[0-9]+\.[0-9]+\.[0-9]+$'
+    default: '[0-9]+\.[0-9]+\.[0-9]+'
   fork_repo_name:
     description: 'PRs from forked repos do not work by default. If this PR is from a forked repo, provide the new REPO_NAME (https://github.com/[REPO_NAME].git)'
     required: true
