--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,14 +10,14 @@ jobs:
     name: Standard usage
     steps:
     - name: Version checker
-      uses: mwcodebase/versioning-checker
+      uses: mwcodebase/versioning-checker@2.1.4
 
   unique_version_check:
     runs-on: ubuntu-latest
     name: With parameters
     steps:
     - name: Version checker
-      uses: mwcodebase/versioning-checker
+      uses: mwcodebase/versioning-checker@2.1.4
       with:
         tracked_files: 'APP_VERSION,CHANGELOG.md'
         version_regex:  '[0-9]+\.[0-9]+\.[0-9]+'
