--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,15 +7,18 @@ on:
 jobs:
   version_check:
     runs-on: ubuntu-latest
-    name: Checks APP_VERSION and CHANGELOG.md files for updates
+    name: Standard usage
     steps:
-    - name: Run version checker
+    - name: Version checker
       uses: mwcodebase/versioning-checker@2.1.4
-  fork_version_check:
+
+  unique_version_check:
     runs-on: ubuntu-latest
-    name: Checks APP_VERSION and CHANGELOG.md files for updates, simulated for a forked repo
+    name: With parameters
     steps:
-    - name: Run fork version checker
+    - name: Version checker
       uses: mwcodebase/versioning-checker@2.1.4
       with:
-        fork_repo_name: mwcodebase/versioning-checker
+        tracked_files: 'APP_VERSION,CHANGELOG.md'
+        version_regex:  '[0-9]+\.[0-9]+\.[0-9]+'
+        fork_repo_name: 'mwcodebase/versioning-checker'
